--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -61,47 +61,59 @@
                         <p class="inline">Марка</p>
                         <p class="line2 inline">авто:</p>
                     </div>
-                    <select class="inline" name="Марка авто" id="mark_1">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                    </select>
+                    <div class="select inline">
+                        <select class="inline" name="Марка авто" id="mark_1">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                        </select>
+                        <div class="select__arrow"></div>
                     </div>
+                </div>
                 <div>
                     <div class="drop_list model inline">
                         <p>Модель</p>
                         <p class="line2">автомобиля:</p>
                     </div>
-                    <select class="inline" name="Модель автомобиля" id="model_1">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                    </select>
+                    <div class="select inline">
+                        <select class="inline" name="Модель автомобиля" id="model_1">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                        </select>
+                        <div class="select__arrow"></div>
+                    </div>
                 </div>
                 <div>
                     <div class="drop_list model inline">
                         <p>Год выпуска</p>
                         <p class="line2">автомобиля:</p>
                     </div>
-                    <select class="year inline" name="Год выпуска автомобиля" id="year_1">
-                        <option value="2001">2001</option>
-                        <option value="2002">2002</option>
-                        <option value="2003">2003</option>
-                        <option value="2004">2004</option>
-                    </select>
+                    <div class="select inline">
+                        <select class="year inline" name="Год выпуска автомобиля" id="year_1">
+                            <option value="2001">2001</option>
+                            <option value="2002">2002</option>
+                            <option value="2003">2003</option>
+                            <option value="2004">2004</option>
+                        </select>
+                        <div class="select__arrow select__arrow_year"></div>
+                    </div>
                 </div>
                 <div>
                     <div class="drop_list complectation inline">
                         <p>Комплектация:</p>
                     </div>
-                    <select class="inline" name="Комплектация" id="complectation_1">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                    </select>
+                    <div class="select inline">
+                        <select class="inline" name="Комплектация" id="complectation_1">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                        </select>
+                        <div class="select__arrow"></div>
+                    </div>
                 </div>
                 <div class="select_disks">
                     <div class="drop_list_group2 inline">Шины:</div>
@@ -110,48 +122,60 @@
                             <p class="inline">Марка</p>
                             <p class="line2 inline">авто:</p>
                         </div>
-                        <select class="inline" name="Марка авто" id="mark">
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                        </select>
+                        <div class="select inline">
+                            <select class="inline" name="Марка авто" id="mark_1">
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                            </select>
+                            <div class="select__arrow"></div>
+                        </div>
                     </div>
                     <div>
                         <div class="drop_list model inline">
                             <p>Модель</p>
                             <p class="line2">автомобиля:</p>
                         </div>
-                        <select class="inline" name="Модель автомобиля" id="model">
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                        </select>
+                        <div class="select inline">
+                            <select class="inline" name="Модель автомобиля" id="model_1">
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                            </select>
+                            <div class="select__arrow"></div>
+                        </div>
                     </div>
                     <div>
                         <div class="drop_list model inline">
                             <p>Год выпуска</p>
                             <p class="line2">автомобиля:</p>
                         </div>
-                        <select class="year inline" name="Год выпуска автомобиля" id="year">
-                            <option value="2001">2001</option>
-                            <option value="2002">2002</option>
-                            <option value="2003">2003</option>
-                            <option value="2004">2004</option>
-                        </select>
+                        <div class="select inline">
+                            <select class="year inline" name="Год выпуска автомобиля" id="year_1">
+                                <option value="2001">2001</option>
+                                <option value="2002">2002</option>
+                                <option value="2003">2003</option>
+                                <option value="2004">2004</option>
+                            </select>
+                            <div class="select__arrow select__arrow_year"></div>
+                        </div>
                     </div>
                     <div>
                         <div class="drop_list complectation inline">
                             <p>Комплектация:</p>
                         </div>
-                        <select class="inline" name="Комплектация" id="complectation">
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                        </select>
-                     </div>
+                        <div class="select inline">
+                            <select class="inline" name="Комплектация" id="complectation_1">
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                            </select>
+                            <div class="select__arrow"></div>
+                        </div>
+                    </div>
                 </div>
                 <input class="search_button search_by_car_button" type="submit" value="поиск...">
             </form>
@@ -160,26 +184,35 @@
         <h4 class="tires_search_titel">Поиск шин</h4>
         <form action="#" method="get">
             <p class="drop_list inline">Размер:</p>
-            <select class="size_drop_list inline" name="Размер" id="size">
-                <option value="145">145</option>
-                <option value="150">150</option>
-                <option value="155">155</option>
-                <option value="160">160</option>
-            </select>
-            <p class="drop_list slash inline">/</p>
-            <select class="size_drop_list inline" name="Размер_2" id="size_2">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-            </select>
-            <p class="drop_list radius inline">R</p>
-            <select class="radius_drop_list inline" name="R" id="R">
-                <option value="12">12</option>
-                <option value="13">13</option>
-                <option value="14">14</option>
-                <option value="15">15</option>
-            </select>
+            <div class="select inline">
+                <select class="size_drop_list inline" name="Размер" id="size">
+                    <option value="145">145</option>
+                    <option value="150">150</option>
+                    <option value="155">155</option>
+                    <option value="160">160</option>
+                </select>
+                <div class="select__arrow"></div>
+            </div>
+            <div class="select inline">
+                <p class="drop_list slash inline">/</p>
+                <select class="size_drop_list inline" name="Размер_2" id="size_2">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                </select>
+                <div class="select__arrow"></div>
+            </div>
+            <div class="select inline">
+                <p class="drop_list radius inline">R</p>
+                <select class="radius_drop_list inline" name="R" id="R">
+                    <option value="12">12</option>
+                    <option value="13">13</option>
+                    <option value="14">14</option>
+                    <option value="15">15</option>
+                </select>
+            <div class="select__arrow"></div>
+            </div>
             <div>
                 <p class="drop_list season inline">Сезон:</p>
                 <div class="check_season inline">
