--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -394,7 +394,7 @@
     </aside>
     <div class="content">
         <main>
-            <div class="goodyear inline">
+            <div class="tire_container inline">
                 <p class="name">Goodyear</p>
                 <p class="spec">Ultra Grip Extreme</p>
                 <div class="tires">
@@ -402,7 +402,7 @@
                 </div>
                 <p class="price_list">90.00 грн.</p>
             </div>
-            <div class="nokian inline">
+            <div class="tire_container inline">
                 <p class="name">Nokian</p>
                 <p class="spec">Hakkapeliitta R</p>
                 <div class="tires">
@@ -410,7 +410,7 @@
                 </div>
                 <p class="price_list">115.00 грн.</p>
             </div>
-            <div class="inline">
+            <div class="tire_container inline">
                 <p class="name">Hankook</p>
                 <p class="spec">K 708 155/65 R14 </p>
                 <div class="tires">
@@ -418,7 +418,7 @@
                 </div>
                 <p class="price_list">393.00 грн.</p>
             </div>
-            <div class="goodyear inline">
+            <div class="tire_container inline">
                 <p class="name">Goodyear</p>
                 <p class="spec">Ultra Grip Extreme</p>
                 <div class="tires">
@@ -426,7 +426,7 @@
                 </div>
                 <p class="price_list">90.00 грн.</p>
             </div>
-            <div class="nokian inline">
+            <div class="tire_container inline">
                 <p class="name">Nokian</p>
                 <p class="spec">Hakkapeliitta R</p>
                 <div class="tires">
@@ -434,7 +434,7 @@
                 </div>
                 <p class="price_list">115.00 грн.</p>
             </div>
-            <div class="goodyear inline">
+            <div class="tire_container inline">
                 <p class="name">Goodyear</p>
                 <p class="spec">Ultra Grip Extreme</p>
                 <div class="tires">
@@ -442,7 +442,7 @@
                 </div>
                 <p class="price_list">90.00 грн.</p>
             </div>
-            <div class="inline">
+            <div class="tire_container inline">
                 <p class="name">Hankook</p>
                 <p class="spec">K 708 155/65 R14 </p>
                 <div class="tires">
@@ -450,7 +450,7 @@
                 </div>
                 <p class="price_list">393.00 грн.</p>
             </div>
-            <div class="inline nokian">
+            <div class="tire_container inline">
                 <p class="name">Nokian</p>
                 <p class="spec">Hakkapeliitta R</p>
                 <div class="tires">
@@ -458,7 +458,7 @@
                 </div>
                 <p class="price_list">115.00 грн.</p>
             </div>
-            <div class="inline">
+            <div class="tire_container inline">
                 <p class="name">Hankook</p>
                 <p class="spec">K 708 155/65 R14 </p>
                 <div class="tires">
