--- a/lesson7-8/index.html
+++ b/lesson7-8/index.html
@@ -7,6 +7,66 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+    <header>
+        <nav>
+            <div class="logo">
+                <p>Pingbull</p>
+                <p>er</p>
+            </div>
+            <ul class="menu">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">Lorem ipsum</a></li>
+                <li><a href="#">Dolor sit amet</a></li>
+            </ul>
+        </nav>
+        <main>
+            <div class="slider">
+                <div class="slider__box">
+                    <p class="slider__name">Lorem Ipsum Dolor</p>
+                    <p class="slider__slogan">It will make all of your dreams come true</p>
+                    <p>Semper sollicitudin gravida eget, vestibulum sit amet sapien. Nunc dignissim tincidunt est, et auctor turpis ornare a.
+                       Nam venenatis hendrerit est at volutpat. Morbi elementum euismod lacus id semper. In odio nunc, imperdiet eget aliquam quis, euismod id </p>
+                </div>
+                <div class="slider__images"><img src="img/iphone.png" alt=""></div>
+            </div>
+        </main>
+        <div></div>
+    </header>
+    <div class="blurbs">
+        <div class="blurbs__wrapper">
+            <img class="blurbs__img" src="img/wrench1.png" alt="">
+            <div class="blurbs__box">
+                <p class="blurbs__name">About our company</p>
+                <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae </p>
+                <p><a class="blurbs__link" href="#">Read more</a></p>
+            </div>
+            <img class="blurbs__img" src="img/say.png" alt="">
+            <div class="blurbs__box">
+                <p class="blurbs__name">About our company</p>
+                <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae </p>
+                <p><a class="blurbs__link" href="#">Read more</a></p>
+            </div>
+            <img class="blurbs__img" src="img/music.png" alt="">
+            <div class="blurbs__box">
+                <p class="blurbs__name">About our company</p>
+                <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae </p>
+                <p><a class="blurbs__link" href="#">Read more</a></p>
+            </div>
+        </div>
+    </div>
+    <div>
+        <div></div>
+        <div></div>
+    </div>
+    <div><img src="img/logos.png" alt=""></div>
+    <div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+    <footer></footer>
 </body>
 </html>
