--- a/lesson7-8/index.html
+++ b/lesson7-8/index.html
@@ -5,36 +5,45 @@
     <title>Dz7-8</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="logo">
-                <p>Pingbull</p>
-                <p>er</p>
-            </div>
-            <ul class="menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Products</a></li>
-                <li><a href="#">Lorem ipsum</a></li>
-                <li><a href="#">Dolor sit amet</a></li>
-            </ul>
-        </nav>
+    <div class="background">
+        <header>
+            <nav>
+                <div class="logo">
+                    <p class="logo__part1">Pingbull</p>
+                    <p class="logo__part2">er</p>
+                </div>
+                <ul class="menu">
+                    <li class="menu__item"><a class="menu__link" href="#">Home</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#">About</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#">Blog</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#">Products</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#">Lorem ipsum</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#">Dolor sit amet</a></li>
+                </ul>
+            </nav>
+        </header>
         <main>
             <div class="slider">
                 <div class="slider__box">
-                    <p class="slider__name">Lorem Ipsum Dolor</p>
+                    <p class="slider__name">Lorem ipsum dolor</p>
                     <p class="slider__slogan">It will make all of your dreams come true</p>
-                    <p>Semper sollicitudin gravida eget, vestibulum sit amet sapien. Nunc dignissim tincidunt est, et auctor turpis ornare a.
-                       Nam venenatis hendrerit est at volutpat. Morbi elementum euismod lacus id semper. In odio nunc, imperdiet eget aliquam quis, euismod id </p>
+                    <p class="slider__text">Semper sollicitudin gravida eget, vestibulum sit amet sapien. Nunc dignissim tincidunt est, et auctor turpis ornare a.
+                       Nam venenatis hendrerit est at volutpat. Morbi elementum euismod lacus id semper. In odio nunc, imperdiet eget aliquam quis, euismod id lectus.
+                       Nulla interdum arcu et felis aliquam a tempus lectus lobortis.</p>
                 </div>
                 <div class="slider__images"><img src="img/iphone.png" alt=""></div>
             </div>
         </main>
-        <div></div>
-    </header>
+        <div class="slider__nav">
+            <p class="slider__button"></p>
+            <p class="slider__button"></p>
+            <p class="slider__button"></p>
+            <p class="slider__button"></p>
+        </div>
+    </div>
     <div class="blurbs">
         <div class="blurbs__wrapper">
             <img class="blurbs__img" src="img/wrench1.png" alt="">
